--- a/.drone.yml
+++ b/.drone.yml
@@ -13,13 +13,6 @@ steps:
   image: plugins/slack
   settings:
     channel: server_messages
-    username: drone
-    environment:
-      webhook:
-        from_secret: slack_webhook_url
-    template: >
-      {{#success build.status}}
-        build {{build.number}} succeeded. Good job.
-      {{else}}
-        build {{build.number}} failed. Fix me please.
-      {{/success}}
+    secrets: [ slack_webhook_url ]
+    when:
+      status: [ success, failure ]
