--- a/.drone.yml
+++ b/.drone.yml
@@ -13,9 +13,6 @@ steps:
   image: plugins/slack
   settings:
     channel: server_messages
-    environment:
-      repo: a2261389/drone-demo
-      webhook:
-        from_secret: slack_webhook_url
+    secrets: [ slack_webhook_url ]
     when:
       status: [ success, failure ]
