--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,7 @@ steps:
   - name: test
     image: golang:1.13-alpine
     commands:
+      - go mod download
       - go build
       - go test -v
 
