--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,10 @@ name: default
 steps:
   - name: test
     image: golang:1.13-alpine
+    environment:
+      - GOOS=linux
+      - GOARCH=amd64
+      - CGO_ENABLED=0
     commands:
       - go mod download
       - go build
