--- a/.drone.yml
+++ b/.drone.yml
@@ -39,12 +39,14 @@ steps:
       when:
         status: [success, failure]
       template: >
-        Commit author:{{build.author}}
-        Commit sha:{{build.commit}}
+        Repo name: {{repo.name}}
+        Commit author: {{build.author}}
+        Commit sha: {{build.commit}}
+        Branch: {{build.branch}}
         {{#success build.status}}
           go build {{build.number}} succeeded. Good job.
-          started_at {{build.started}}
           created_at {{build.created}}
+          started_at {{build.started}}
         {{else}}
           go build {{build.number}} failed. Fix me please.
         {{/success}}
