--- a/.drone.yml
+++ b/.drone.yml
@@ -42,15 +42,12 @@ steps:
         {{#success build.status}}
           Repo name: {{repo.name}}
           Commit author: {{build.author}}
-          Commit sha: {{build.commit}}
-          Branch: {{build.branch}}
+          Commit: {{build.commit}} [{{build.branch}}]
           go build {{build.number}} succeeded. Good job.
-          created_at {{build.created}}
-          started_at {{build.started}}
+          since: {{since build.started}}
         {{else}}
           Repo name: {{repo.name}}
           Commit author: {{build.author}}
-          Commit sha: {{build.commit}}
-          Branch: {{build.branch}}
+          Commit: {{build.commit}} [{{build.branch}}]
           go build {{build.number}} failed. Fix me please.
         {{/success}}
